Various cleanup to handle new streetfile table.